# array-2021-supmaterial

./: README.md
input/: README.md
pt/: README.md  main.py
sac/: Makefile  kaggle-1fc.sac  zhang.sac
tf-cxx/: CMakeLists.txt  README.md  zhang.cc
tf-cxx/cmake/: FindCUDNN.cmake
tf-py/: README.md  zhang-tf2-refa.py  zhang-tf2.py  zhang.py
